Bug 464724 - Kate widget does not open a new blank session
Summary: Kate widget does not open a new blank session
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: Kate Sessions (other bugs)
Version First Reported In: 5.27.1
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords:
: 466646 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-01-24 08:25 UTC by Peter Tselios
Modified: 2023-05-13 10:56 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Tselios 2023-01-24 08:25:45 UTC
SUMMARY
This is happening on Fedora 36. 

STEPS TO REPRODUCE
1. Add the Kate Sessions widget somewhere in your screen
2. Click on the "Start Kate (no arguments)"

OBSERVED RESULT
The "Start Kate  (no arguments)" becomes a text box in which you need to type a session name in order to start Kate

EXPECTED RESULT
Kate should start without any session. 

SOFTWARE/OS VERSIONS
Linux: Fedora 36
KDE Plasma Version: 5.26.4
KDE Frameworks Version: 5.101
Qt Version: 5.15
Comment 1 Peter Tselios 2023-03-02 18:50:56 UTC
As a side note, I was pointed to the Github of the project (https://github.com/KDE/kdeplasma-addons). 
I first noticed this behavior around the end of 2022. Maybe the latest commit (d70cfca) and if I am not completely lost from the code changes, now instead a "click" area you have and text box that you need to write something. 

Although I understand the logic behind it, we still need to have an option for "Blank" session (as the title says).
Comment 2 Paul Worrall 2023-03-04 12:31:38 UTC
*** Bug 466646 has been marked as a duplicate of this bug. ***
Comment 3 Bug Janitor Service 2023-03-05 06:50:03 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kdeplasma-addons/-/merge_requests/353
Comment 4 Alexander Lohnau 2023-03-27 17:56:49 UTC
Git commit c3c909af32046b466e302b3622ff51dae6a21e44 by Alexander Lohnau.
Committed on 27/03/2023 at 17:55.
Pushed by alex into branch 'master'.

ProfilesModel: Add placeholder for option "Start Kate (no arguments)"

This way one is not asked for entering a session name.

M  +4    -2    profiles/profilesmodel.cpp

https://invent.kde.org/plasma/kdeplasma-addons/commit/c3c909af32046b466e302b3622ff51dae6a21e44
Comment 5 Alexander Lohnau 2023-03-27 17:57:33 UTC
Git commit 9d0658a36736ab99c920a04e53e3f2e5f404ef46 by Alexander Lohnau.
Committed on 27/03/2023 at 17:57.
Pushed by alex into branch 'Plasma/5.27'.

ProfilesModel: Add placeholder for option "Start Kate (no arguments)"

This way one is not asked for entering a session name.


(cherry picked from commit c3c909af32046b466e302b3622ff51dae6a21e44)

M  +4    -2    profiles/profilesmodel.cpp

https://invent.kde.org/plasma/kdeplasma-addons/commit/9d0658a36736ab99c920a04e53e3f2e5f404ef46
Comment 6 Peter Tselios 2023-05-13 10:56:19 UTC
This comment is about any user that might see this bug report: 

Although the issue IS fixed, in the Kate Sessions you might see the "Start Kate (no arguments)" twice. 
The line at the top is actually a session with that name! So, to fix this you need to click on the first "no arguments" entry, select the session with the same name and delete it. After that, everything is OK.