ProfilesModel: Add placeholder for option "Start Kate (no arguments)"

This way one is not asked for entering a session name.

BUG: 464724